[gd_scene load_steps=2 format=3 uid="uid://y0k1bdgmthmt"]

[ext_resource type="Script" path="res://scripts/meta_shop.gd" id="1_5aick"]

[node name="MetaShop" type="CanvasLayer"]
script = ExtResource("1_5aick")

[node name="Panel" type="Panel" parent="."]
offset_right = 244.0
offset_bottom = 301.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Gems" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HPButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Max HP +10"

[node name="ManaButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Max Mana +10"

[node name="SpeedButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Speed +10"

[node name="ManaRegenButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Mana Regen +1"

[node name="HealthRegenButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Health Regen +0.5"

[node name="Feedback" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CloseShop" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Back"
